<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txvFormulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/formulario"
            android:paddingStart="350dp"
            android:paddingEnd="300sp"
            android:textSize="56sp">

        </TextView>

        <EditText
            android:id="@+id/editarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/nombre"
            android:autofillHints="Qstring/nombre">

        </EditText>

        <EditText
            android:id="@+id/editarApe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/apellido"
            android:autofillHints="@string/apellido">

        </EditText>

        <EditText
            android:id="@+id/editarEdad"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/edad"
            android:autofillHints="@string/edad">

        </EditText>

        <EditText
            android:id="@+id/editarCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/ciudad"
            android:autofillHints="@string/ciudad">

        </EditText>

        <EditText
            android:id="@+id/editarBarrio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_marginTop="26dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/barrio"
            android:autofillHints="@string/barrio">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnGuardar"
            android:text="@string/guardar"
            android:layout_width="8dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="36sp">

        </Button>

        <Button
            android:id="@+id/btnBorrar"
            android:text="@string/borrar"
            android:layout_width="8dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="36sp">

        </Button>

    </LinearLayout>

</LinearLayout>